tests/paczka1/small_fuzzy/65692574.err
Error in line 8: 7e7 S921 59,4
Error in line 5: Qt1s8FNth8 S921 54,3
Error in line 9: 7e7 S610 57,5
